--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
     "redux-persist": "^6.0.0",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "swiper-react": "^1.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react-swc": "^3.5.0",
