--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "nodemon server",
     "dev": "nodemon server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build":"npm install && npm install --prefix client && npm run build --prefix Real-Estate-management-full-stack"
   },
   "keywords": [],
   "author": "",
